unpackaged/main/default/objects/Asset/fields/Compound_Increase_Rate__c.field-meta.xml
<CustomField>
    <fullName>Compound_Increase_Rate__c</fullName>
    <label>Compound Increase Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>