unpackaged/main/default/objects/Asset/fields/Customer_Total_Copy__c.field-meta.xml
<CustomField>
    <fullName>Customer_Total_Copy__c</fullName>
    <description>Twin Field</description>
    <label>Customer Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>