unpackaged/main/default/objects/Asset/fields/IncludePriorQuantity__c.field-meta.xml
<CustomField>
    <fullName>IncludePriorQuantity__c</fullName>
    <formula>True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IncludePriorQuantity</label>
    <type>Checkbox</type>
</CustomField>