unpackaged/main/default/objects/Asset/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Catalogue Product</fullName>
            </value>
            <value>
                <fullName>Write In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>