unpackaged/main/default/objects/Asset/fields/Migrated_from_Asset__c.field-meta.xml
<CustomField>
    <fullName>Migrated_from_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Migrated from Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Current Licences &amp; ASMs (Migrated from Asset)</relationshipLabel>
    <relationshipName>Current_Licences_ASMs</relationshipName>
    <type>Lookup</type>
</CustomField>