unpackaged/main/default/objects/Asset/fields/Migrated_to_SaaS_Platform__c.field-meta.xml
<CustomField>
    <fullName>Migrated_to_SaaS_Platform__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migrated to SaaS Platform</label>
    <type>Checkbox</type>
</CustomField>