unpackaged/main/default/objects/Asset/fields/oWeightedAveragePrice__c.field-meta.xml
<CustomField>
    <fullName>oWeightedAveragePrice__c</fullName>
    <formula>Weighted_Average_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>oWeightedAveragePrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>