unpackaged/main/default/objects/Asset/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <label>Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solution - eMinisterials</fullName>
            </value>
            <value>
                <fullName>Solution - OneAirport</fullName>
            </value>
            <value>
                <fullName>Solution - OneBanking</fullName>
            </value>
            <value>
                <fullName>Solution - OneCare</fullName>
            </value>
            <value>
                <fullName>Solution - OneCommunity</fullName>
            </value>
            <value>
                <fullName>Solution - OneCorporate</fullName>
            </value>
            <value>
                <fullName>Solution - OneCouncil</fullName>
            </value>
            <value>
                <fullName>Solution - OneEducation</fullName>
            </value>
            <value>
                <fullName>Solution - OneEnergy</fullName>
            </value>
            <value>
                <fullName>Solution - OneGovernment</fullName>
            </value>
            <value>
                <fullName>Solution - OneHealth</fullName>
            </value>
            <value>
                <fullName>Solution - OneHousing</fullName>
            </value>
            <value>
                <fullName>Solution - OneInsurance</fullName>
            </value>
            <value>
                <fullName>Solution - OneMembership</fullName>
            </value>
            <value>
                <fullName>Solution - OnePolytechnic</fullName>
            </value>
            <value>
                <fullName>Solution - OnePort</fullName>
            </value>
            <value>
                <fullName>Solution - OneProject</fullName>
            </value>
            <value>
                <fullName>Solution - OneResearch</fullName>
            </value>
            <value>
                <fullName>Solution - OneTAFE</fullName>
            </value>
            <value>
                <fullName>Solution - OneUniversity</fullName>
            </value>
            <value>
                <fullName>Solution - OneWater</fullName>
            </value>
            <value>
                <fullName>Solution - OneWealth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>