unpackaged/main/default/objects/Asset/fields/Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Unit_Code__c</fullName>
    <label>Unit Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        </valueSetDefinition>
    </valueSet>
</CustomField>