unpackaged/main/default/objects/Asset/fields/Weighted_Average_Price__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Average_Price__c</fullName>
    <label>Weighted Average Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>