unpackaged/main/default/objects/Asset/validationRules/Product_not_entered_for_Asset.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_not_entered_for_Asset</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( TEXT(Product__c )) || ISNULL( TEXT(Product__c ))</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Product must be entered</errorMessage>
</ValidationRule>